--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -31,19 +31,19 @@
         <blockquote>
           I am completely blown away. Thanks to Techium, we've just launched our 5th website!
         </blockquote>
-        <cite>Yuri Y.</cite>
+        <footer><small>By Kelly D.</small></footer>
       </article>
       <article>
         <blockquote>
           Thank you so much for your help. Techium company is awesome!
         </blockquote>
-        <cite>Dorrie S.</cite>
+        <footer><small>By William A.</small></footer>
       </article>
       <article>
         <blockquote>
           I love your system. Definitely worth the investment. I'd be lost without Techium company.
         </blockquote>
-        <cite>Sven H.</cite>
+        <footer><small>By Frances J.</small></footer>
       </article>
     </section>
 
