--- a/0x03-responsive_design/09-index.html
+++ b/0x03-responsive_design/09-index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='03-styles.css'>
+    <link rel='stylesheet' href='09-styles.css'>
   </head>
   <body>
     <!-- Header -->
@@ -19,6 +19,10 @@
             <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
           </a>
         </div>
+        <input class="menu-btn" type="checkbox" id="menu-btn">
+        <label for="menu-btn" class="menu-icon">
+          <span class="navicon"></span>
+        </label>
         <nav class="navbar-menu">
           <ul class="nav">
             <li class="nav-item">
@@ -178,12 +182,12 @@
             <div class="row">
               <div class="col-1-2">
                 <img
-                   sizes="(max-width: 1150px) 40vw, 460px"
-                   srcset="
-                   images/pic-about-01_qqf0vg_c_scale,w_380.jpg 380w,
-                   images/pic-about-01_qqf0vg_c_scale,w_460.jpg 460w"
-                   src="images/pic-about-01_qqf0vg_c_scale,w_460.jpg"
-                   alt="">
+                  sizes="(max-width: 1600px) 40vw, 640px"
+                  srcset="
+                  images/pic-about-01_slnckd_c_scale,w_380.jpg 380w,
+                  images/pic-about-01_slnckd_c_scale,w_640.jpg 640w"
+                  src="images/pic-about-01_slnckd_c_scale,w_640.jpg"
+                  alt="">
               </div>
               <div class="col-1-2">
                 <h3>Who are we</h3>
@@ -212,11 +216,13 @@
                 <article class="card-blog">
                   <div>
                     <img
-                       sizes="(max-width: 763px) 40vw, 305px"
-                       srcset="
-                       images/pic-article-01_fyfgin_c_scale,w_305.jpg 305w"
-                       src="images/pic-article-01_fyfgin_c_scale,w_305.jpg"
-                       alt="">
+                      sizes="(max-width: 1600px) 40vw, 640px"
+                      srcset="
+                      images/pic-article-01_y3tido_c_scale,w_380.jpg 380w,
+                      images/pic-article-01_y3tido_c_scale,w_613.jpg 613w,
+                      images/pic-article-01_y3tido_c_scale,w_640.jpg 640w"
+                      src="images/pic-article-01_y3tido_c_scale,w_640.jpg"
+                      alt="">
                   </div>
                   <p class="card-category">Career</p>
                   <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -228,11 +234,12 @@
                 <article class="card-blog">
                   <div>
                     <img
-                       sizes="(max-width: 763px) 40vw, 305px"
-                       srcset="
-                       images/pic-article-02_md8kn9_c_scale,w_305.jpg 305w"
-                       src="images/pic-article-02_md8kn9_c_scale,w_305.jpg"
-                       alt="">
+                      sizes="(max-width: 1600px) 40vw, 640px"
+                      srcset="
+                      images/pic-article-02_ssiwrr_c_scale,w_380.jpg 380w,
+                      iamges/pic-article-02_ssiwrr_c_scale,w_640.jpg 640w"
+                      src="images/pic-article-02_ssiwrr_c_scale,w_640.jpg"
+                      alt="">
                     </div>
                   <p class="card-category">Digital Life</p>
                   <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
@@ -244,11 +251,12 @@
                 <article class="card-blog">
                   <div>
                     <img
-                       sizes="(max-width: 763px) 40vw, 305px"
-                       srcset="
-                       images/pic-article-03_e8cb5a_c_scale,w_305.jpg 305w"
-                       src="images/pic-article-03_e8cb5a_c_scale,w_305.jpg"
-                       alt="">
+                    sizes="(max-width: 1600px) 40vw, 640px"
+                    srcset="
+                    images/pic-article-03_sjfchu_c_scale,w_380.jpg 380w,
+                    images/pic-article-03_sjfchu_c_scale,w_640.jpg 640w"
+                    src="images/pic-article-03_sjfchu_c_scale,w_640.jpg"
+                    alt="">
                   </div>
                   <p class="card-category">Social</p>
                   <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
