--- a/0x03-responsive_design/02-1-index.html
+++ b/0x03-responsive_design/02-1-index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='03-styles.css'>
+    <link rel='stylesheet' href='02-1-styles.css'>
   </head>
   <body>
     <!-- Header -->
@@ -177,13 +177,7 @@
           <div class="section-body">
             <div class="row">
               <div class="col-1-2">
-                <img
-                   sizes="(max-width: 1150px) 40vw, 460px"
-                   srcset="
-                   images/pic-about-01_qqf0vg_c_scale,w_380.jpg 380w,
-                   images/pic-about-01_qqf0vg_c_scale,w_460.jpg 460w"
-                   src="images/pic-about-01_qqf0vg_c_scale,w_460.jpg"
-                   alt="">
+                <img src="images/pic-about-01.jpg" alt="" width="460" height="460">
               </div>
               <div class="col-1-2">
                 <h3>Who are we</h3>
@@ -211,12 +205,7 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img
-                       sizes="(max-width: 763px) 40vw, 305px"
-                       srcset="
-                       images/pic-article-01_fyfgin_c_scale,w_305.jpg 305w"
-                       src="images/pic-article-01_fyfgin_c_scale,w_305.jpg"
-                       alt="">
+                    <img src="images/pic-article-01.jpg" alt="" width="305" height="305">
                   </div>
                   <p class="card-category">Career</p>
                   <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -227,13 +216,8 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img
-                       sizes="(max-width: 763px) 40vw, 305px"
-                       srcset="
-                       images/pic-article-02_md8kn9_c_scale,w_305.jpg 305w"
-                       src="images/pic-article-02_md8kn9_c_scale,w_305.jpg"
-                       alt="">
-                    </div>
+                    <img src="images/pic-article-02.jpg" alt="" width="305" height="305">
+                  </div>
                   <p class="card-category">Digital Life</p>
                   <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
@@ -243,12 +227,7 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img
-                       sizes="(max-width: 763px) 40vw, 305px"
-                       srcset="
-                       images/pic-article-03_e8cb5a_c_scale,w_305.jpg 305w"
-                       src="images/pic-article-03_e8cb5a_c_scale,w_305.jpg"
-                       alt="">
+                    <img src="images/pic-article-03.jpg" alt="" width="305" height="305">
                   </div>
                   <p class="card-category">Social</p>
                   <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
